added new code, removed unnecessary

--- a/configs/config_example.yaml
+++ b/configs/config_example.yaml
@@ -7,3 +7,11 @@ logger:
 strategy:
     name: maker
 
+adapter:
+    api_key:
+    api_secret:
+    streaming:
+        url: wss://api.alpha.emx.com
+    execution:
+        url: http://api.alpha.emx.com
+
