--- a/configs/config_example.yaml
+++ b/configs/config_example.yaml
@@ -1,15 +1,21 @@
 #Configuration example
 
 logger:
-    name: prod_strl_eth-btc_h
     level: INFO
+    name: mm_bot_logger
 
 strategy:
-    name: maker
+    name: market_maker
+    instrument_name: 'TEST-PERP'
+
+    tick_size: 0.5
+
+    stop_strategy_on_error: True
+    cancel_orders_on_reconnection: False
 
 adapter:
-    api_key:
-    api_secret:
+    api_key: ''
+    api_secret: ''
     streaming:
         url: wss://api.alpha.emx.com
     execution:
