--- a/configs/config_example.yaml
+++ b/configs/config_example.yaml
@@ -10,6 +10,8 @@ strategy:
 
     tick_size: 0.5
 
+    depth: 10
+    quantity: 0.3
     stop_strategy_on_error: True
     cancel_orders_on_reconnection: False
 
