--- a/configs/config_example.yaml
+++ b/configs/config_example.yaml
@@ -9,6 +9,8 @@ strategy:
     instrument_name: 'BTC-PERP'
 
     tick_size: 0.5
+    price_rounding: 2
+    qty_rounding: 2
 
     orders:
         asks: [
