added new config option to config examples

--- a/configs/config_mm_testnet_ETH-BTC.yaml
+++ b/configs/config_mm_testnet_ETH-BTC.yaml
@@ -6,6 +6,7 @@ strategy:
     name: market_maker
     instrument_name: 'ETH-BTC'
 
+    mid_price_based_calculation: False
     tick_size: 0.000001
     price_rounding: 6
 
