--- a/configs/config_example.yaml
+++ b/configs/config_example.yaml
@@ -8,6 +8,7 @@ strategy:
     name: market_maker
     instrument_name: 'BTC-PERP'
 
+    mid_price_based_calculation: False
     tick_size: 0.5
     price_rounding: 4
 
