minor change in configs

--- a/configs/config_mm_testnet_ETH-BTC.yaml
+++ b/configs/config_mm_testnet_ETH-BTC.yaml
@@ -21,7 +21,7 @@ strategy:
               ]
 
     cancel_orders_on_start: True
-    stop_strategy_on_error: True
+    stop_strategy_on_error: False
     cancel_orders_on_reconnection: False
 
 adapter:
